# spriteforge

./: .gitignore  README.md  invalid_test.json  pyproject.toml
.github/workflows/: publish.yml
examples/: frog.spriteops.json  hero.spriteops.json  hero_walk.spriteops.json  squirrel.spriteops.json
examples/game/assets/: cloud.spriteops.json
examples/games/flappy/: flappy.py
examples/games/flappy/assets/: bird.spriteops.json  ground.spriteops.json  pipe.spriteops.json
examples/games/game_dice/: dice_sim.py
examples/games/game_dice/assets/: dice.spriteops.json
schemas/: spriteops.schema.json
spriteforge/: __init__.py  cli.py
spriteforge/engine/: __init__.py  layers.py  ops.py  raster.py  render.py  validate.py
spriteforge/tui/: __init__.py  app.py
