[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spriteforge"
version = "1.0.0"
description = "A deterministic, terminal-first pixel sprite compiler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Spriteforge Contributors" }
]
keywords = ["pixel-art", "sprite", "game-dev", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "Pillow>=9.0.0",
    "textual>=0.40.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
spriteforge = "spriteforge.cli:main"

[project.urls]
Homepage = "https://github.com/spriteforge/spriteforge"
Documentation = "https://github.com/spriteforge/spriteforge#readme"
Repository = "https://github.com/spriteforge/spriteforge"

[tool.hatch.build.targets.wheel]
packages = ["spriteforge"]

